--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 2,
   "name": "ScriptAutoRunner",
-  "description": "Injects Script into the any website it able to autorun as well.",
+  "description": "Injects to any Script into a Website. It can be autorun as well.",
   "version": "0.0.1",
   "background": {
     "scripts": ["js/background.js"]
@@ -12,11 +12,16 @@
       "js": ["js/content.js"]
     }
   ],
+  "icons": {
+    "16": "img/icon.png",
+    "48": "img/icon.png",
+    "128": "img/icon.png"
+  },
   "options_page": "options.html",
   "content_security_policy": "allow-scripts; script-src 'self' 'unsafe-eval'; object-src 'self'",
   "browser_action": {
     "default_icon": "img/icon.png",
-    "default_title": "SAR",
+    "default_title": "ScriptAutoRunner",
     "default_popup": "popup.html"
   }
 }
