--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 2,
   "name": "ScriptAutoRunner",
   "description": "Injects to any Script into a Website. It can be autorun as well.",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "background": {
     "scripts": ["js/background.js"]
   },
@@ -21,7 +21,9 @@
   "content_security_policy": "allow-scripts; script-src 'self' 'unsafe-eval'; object-src 'self'",
   "browser_action": {
     "default_icon": "img/icon.png",
-    "default_title": "ScriptAutoRunner",
-    "default_popup": "popup.html"
-  }
+    "default_title": "ScriptAutoRunner"
+  },
+  "permissions": [
+    "tabs", "<all_urls>"
+  ]
 }
